--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -16,9 +16,6 @@ ENV EAP_VERSION_MINOR 0
 ENV EAP_VERSION_MICRO 0
 #ENV EAP_VERSION_PATCH 4
 
-ARG user=bpms
-ARG group=bpms
-
 ENV EAP_INSTALLER=jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO-installer.jar
 ENV BPMS_DEPLOYABLE=jboss-bpmsuite-$BPMS_VERSION_MAJOR.$BPMS_VERSION_MINOR.$BPMS_VERSION_MICRO.$BPMS_VERSION_PATCH-deployable-eap7.x.zip
 
@@ -52,9 +49,7 @@ RUN chown -R 1000:1000 $BPMS_HOME/standalone/configuration/standalone.xml $BPMS_
 # Copy JDBC
 ADD installs/postgresql $BPMS_HOME/modules/system/layers/base/org/postgresql
 
-RUN chown 1000:1000 $BPMS_HOME \
-  && groupadd -g 1000 ${group} \
-  && useradd -d "$BPMS_HOME" -u 1000 -g 1000 -m -s /bin/bash ${user}
+RUN chown 1000:1000 $BPMS_HOME
 VOLUME $BPMS_HOME
 
 # Run as JBoss
